[Testcontainers] Version update