@@ -10,14 +10,14 @@
   <properties>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <version.debezium>1.8.1.Final</version.debezium>
+    <version.debezium>1.9.5.Final</version.debezium>
   </properties>
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.testcontainers</groupId>
         <artifactId>testcontainers-bom</artifactId>
-        <version>1.12.5</version>
+        <version>1.16.1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -49,7 +49,7 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
-      <version>1.7.28</version>
+      <version>1.7.36</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -79,7 +79,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.10.0</version>
+      <version>2.12.6.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -93,8 +93,7 @@
         <execution>
           <id>default-testCompile</id>
           <configuration>
-            <release>14</release>
-            <compilerArgs>--enable-preview</compilerArgs>
+            <release>17</release>
           </configuration>
         </execution>
       </executions>
@@ -102,7 +101,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M4</version>
+        <version>3.0.0-M6</version>
         <configuration>
           <systemPropertyVariables>
             <debeziumVersion>${version.debezium}</debeziumVersion>
